[package]
name = "drone-ti-sl-map-svd"
version = "0.12.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
repository = "https://github.com/drone-os/drone-ti-sl-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-ti-sl-map/0.12/drone_ti_sl_map_svd/"
license = "MIT OR Apache-2.0"
description = """
Texas Instruments SimpleLink SVD to bindings for Drone, an Embedded Operating System.
"""

[dependencies.drone-svd]
version = "0.12.0"
path = "../../drone-svd"

[dependencies]
anyhow = "1"
